--- a/jquery_sticky_header.html
+++ b/jquery_sticky_header.html
@@ -33,65 +33,6 @@
         position: absolute;
     }
 </style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js">
-<script>
-    // External Resources:
-    // https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js
-    // Cleaned up the jQuery crap from:
-    // https://codepen.io/joeaugie/pen/RWbPzo
-
-    var Headers = [];
-
-    function StickyInit(stickyClassName) {
-        var Stickies = $(stickyClassName);
-        Headers = Stickies.each(function() {
-            var div    = '<div class="_header_wrap_" />',
-                sticky = $(this).wrap(div),
-                y      = sticky.offset().top,
-                h      = sticky.outerHeight();
-
-            sticky
-                .data('y', y)
-                .data('h', h)
-                .parent().height(h);
-        });
-        console.log("Sticky ClassName: ", stickyClassName);
-        console.log("Stickies found: %d", Headers.length);
-
-        $(window).scroll(function() {
-            StickyScroll(Headers);
-        });
-    }
-
-    function StickyScroll(headers) {
-        var top = $(window).scrollTop();
-        console.log("Scroll: ", top);
-
-        headers.each(function(i) {
-            var sticky = $(this),
-                h      = sticky.data('h'),
-                y      = sticky.data('y');
-
-            if (y <= top) {
-                var next  = headers.eq(i + 1),
-                    below = next.data('y') - h;
-
-                sticky.addClass("fixed");
-
-                if (next.length > 0 && sticky.offset().top >= below)
-                    sticky.addClass("absolute").css("top", below);
-            } else {
-                sticky.removeClass("fixed");
-
-                var prev = headers.eq(i - 1);
-                if (prev.length > 0 && top <= y - h)
-                    prev.removeClass("absolute").removeAttr("style");
-            }
-        });
-    }
-
-    StickyInit('.sticky');
-</script>
 <body>
 <div class='sticky'>
     <hr>Header A
@@ -166,5 +107,68 @@
     lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla facilisi. Integer lacinia sollicitudin massa. Cras
     metus. </p>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script>
+"use strict";
+    // External Resources:
+    // https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js
+    // Cleaned up the jQuery crap from:
+    // https://codepen.io/joeaugie/pen/RWbPzo
+
+    var gaHeaders = [];
+
+    function StickyInit(stickyClassName) {
+        var Stickies = $(stickyClassName);
+        gaHeaders = Stickies.each(function() {
+            var div    = '<div class="_header_wrap_" />',
+                sticky = $(this).wrap(div),
+                y      = sticky.offset().top,
+                h      = sticky.outerHeight();
+
+            sticky
+                .data('y', y)
+                .data('h', h)
+                .parent().height(h);
+        });
+
+        console.log( "Sticky ClassName: ", stickyClassName );
+        console.log( "Stickies found: ", gaHeaders.length );
+
+        $(window).scroll(function() {
+            StickyScroll( gaHeaders );
+        });
+    }
+
+    function StickyScroll( headers ) {
+        var top = $(window).scrollTop();
+        console.log("Scroll: ", top);
+
+        headers.each(function(i) {
+            var sticky = $(this),
+                h      = sticky.data('h'),
+                y      = sticky.data('y');
+
+            if (y <= top) {
+                sticky.addClass( "fixed" );
+
+                // Handle case when 2 sticky headers are overlapping
+                var next  = headers.eq(i + 1),
+                    below = next.data('y') - h;
+
+                if (next.length > 0 && sticky.offset().top >= below)
+                    sticky.addClass( "absolute" ).css( "top", below );
+            } else {
+                sticky.removeClass( "fixed" );
+
+                var prev = headers.eq(i - 1);
+                if (prev.length > 0 && top <= y - h)
+                    prev.removeClass( "absolute" ).removeAttr( "style" );
+            }
+        });
+    }
+
+    StickyInit( '.sticky' );
+</script>
+
 </html>
 
